--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,6 +20,10 @@
   --ifm-code-font-size: 95%;
 }
 
+.alert {
+  --ifm-link-decoration: none;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
   display: block;
